# OpenProof

./: .gitignore  COMMERCIAL-BOUNDARY.md  CONSTITUTION.md  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
openproof/: __init__.py  __main__.py  cli.py  config.py  errors.py
openproof/canonical/: __init__.py  encoding.py  hashing.py  numbers.py  spans.py  timestamps.py
openproof/commands/: __init__.py  commit.py  doctor.py  import_claude.py  init.py  status.py
openproof/commit/: __init__.py  promote.py  snapshot.py
openproof/gate/: __init__.py  predicates.py  verdict.py
openproof/git/: __init__.py  repo.py
openproof/ledger/: __init__.py  boundary.py  importer.py  projection.py  store.py
openproof/models/: __init__.py  event.py  redaction.py  session.py
openproof/redaction/: __init__.py  patterns.py  redactor.py
openproof/sources/: __init__.py  base.py  claude_jsonl.py
openproof/spec/: __init__.py  gitignore.tmpl
scripts/: acceptance_gate.py
tests/: conftest.py
tests/component/: test_canonical_kernel.py  test_cli.py  test_git_identity.py  test_import_discovery.py  test_importer.py  test_init_command.py  test_normalizer_component.py  test_packaging.py  test_promote.py  test_redaction_component.py  test_source_protocol.py  test_status_doctor.py
tests/golden/conformance/: test_hash_vectors.py  test_import_vectors.py  test_normalize_vectors.py  test_number_domain.py  test_pins.py  test_receipt_vectors.py  test_redaction_vectors.py
tests/scenario/: test_canonical_determinism_scenario.py  test_commit_scenario.py  test_fresh_repo_init_scenario.py  test_import_claude_scenario.py  test_module_entrypoint_scenario.py  test_secret_corpus_scenario.py  test_session_normalization_scenario.py  test_status_doctor_scenario.py
tests/unit/: test_boundary.py  test_claude_jsonl.py  test_commit_gate.py  test_config_layout.py  test_encoding.py  test_gate.py  test_hashing.py  test_numbers.py  test_patterns.py  test_projection.py  test_redactor.py  test_snapshot.py  test_spans.py  test_timestamps.py
