[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openproof"
version = "0.1.1"
description = "A local-first, Git-first evidence ledger and commit-safety gate around Claude Code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenProof" }]
# v0.1 is stdlib-first: zero runtime dependencies (argparse, hashlib, json, re,
# subprocess, unicodedata, decimal, base64 all ship with CPython).
dependencies = []

[project.optional-dependencies]
# setuptools is a TEST-runtime dep (test_packaging.py uses find_packages to guard wheel
# discovery parity) — Python 3.12 venvs no longer ship it by default, so pin it explicitly.
dev = ["pytest>=7.4", "pytest-cov>=4.1", "coverage>=7.0", "setuptools>=68"]

[project.scripts]
openproof = "openproof.cli:main"

[tool.setuptools.packages.find]
# auto-discover ALL openproof sub-packages, so a new one can never be silently left out of
# the built wheel (an explicit list shipped a broken install in v0.1 — never again).
include = ["openproof*"]

[tool.setuptools.package-data]
"openproof.spec" = ["*.tmpl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: a single pure function/class, no I/O",
    "component: a subsystem via its public interface (sandboxed fs/git)",
    "scenario: an end-to-end user story from the spec (§7 workflow / §17 tasks)",
]

[tool.coverage.run]
source = ["openproof"]
omit = [
    # a thin `python -m openproof` shim; exercised behaviorally by the entry-point scenario
    # test (a subprocess), which line-coverage cannot attribute.
    "openproof/__main__.py",
    # a type-only Protocol interface (the source-adapter seam); no executable logic. Its
    # structural conformance is asserted by tests/component/test_source_protocol.py.
    "openproof/sources/base.py",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
]
